# GraphicsResearch

./: CMakeLists.txt  README.md
src/: AnimatedCharacter.cpp  AnimatedCharacter.hpp  CMakeLists.txt  GraphicalObject.cpp  GraphicalObject.hpp  MainWindow.cpp  MainWindow.hpp  common.hpp  main.cpp
src/SFML/: .kdev_include_paths  BenchmarkCanvas.cpp  BenchmarkCanvas.hpp  CMakeLists.txt  QSFMLCanvas.cpp  QSFMLCanvas.hpp
